--- a/.github/workflows/kind-integration-test.yml
+++ b/.github/workflows/kind-integration-test.yml
@@ -1,8 +1,6 @@
 name: Kind integration
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch
 jobs:
   integration-test:
     name: Run Kind Integration Test
