Added eksctl and kubectl for Github action

--- a/.github/workflows/eks-integration-test.yml
+++ b/.github/workflows/eks-integration-test.yml
@@ -23,6 +23,14 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
+      - name: Set up eksctl
+        uses: robatwave/github-action-eksctl@0.1.2
+      - name: Set up kubectl
+        uses: actions-hub/kubectl@1.21.12
+        env:
+          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        with:
+          args: get pods
       - name: Set up env
         run: source ~/.bashrc
       - name: Start clean
