--- a/.github/workflows/eks-integration-test.yml
+++ b/.github/workflows/eks-integration-test.yml
@@ -25,13 +25,12 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: 1.17
-          
+
       - name: Set up kubectl
-        uses: actions-hub/kubectl@master
-        env:
-          KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+        uses: tale/kubectl-action@v1
         with:
-          args: get pods
+          base64-kube-config: ${{ secrets.KUBE_CONFIG }}
+          kubectl-version: v1.22.12
 
       - name: Set up eksctl
         run: |
